--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,15 +6,15 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    W3GT<br />
+    Avenida dos Programadores, 1001<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    97005-5007
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@w3gt.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@w3gt.com</a>
 </address>
 
 {% endblock %}
